--- a/src/components/candidatesection/candidatesection.css
+++ b/src/components/candidatesection/candidatesection.css
@@ -1,9 +1,27 @@
-.title-center {
+.candidate-section {
   position: relative;
   text-align: center;
+  background-color: #eff5f5;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
-.section-margin {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.candidate-section-title {
+  font-size: 30px;
+  padding-top: 20px;
+}
+
+.candidate-section-description {
+  font-size: 24px;
+  margin: 0px;
+}
+
+.candidate-section-thumbnail {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.candidate-section-load-more {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
