--- a/src/components/candidatesection/candidatesection.css
+++ b/src/components/candidatesection/candidatesection.css
@@ -1,14 +1,16 @@
 .candidate {
   position: relative;
   text-align: center;
-  background-color: #eff5f5;
+
   margin-left: -15px;
   margin-right: -15px;
+
 }
 
-.candidate .title {
+.title {
   font-size: 30px;
   padding-top: 20px;
+  text-align: center;
 }
 
 .candidate .description {
@@ -19,10 +21,16 @@
 .candidate .custom-thumbnail {
   margin-top: 20px;
   margin-bottom: 20px;
-  
+
 }
 
 .candidate .load-more {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.wrapper.style1 {
+  border-bottom: 1px solid rgba(144, 144, 144, 0.25);
+  border-top: 1px solid rgba(144, 144, 144, 0.25);
+  background-color: #eff5f5;
 }
