--- a/src/components/candidatethumbnail/candidatethumbnail.css
+++ b/src/components/candidatethumbnail/candidatethumbnail.css
@@ -1,4 +1,4 @@
-.candidate-card-wrapper {
+.card {
   position: relative;
   padding: 15px;
   height: 350px;
@@ -12,7 +12,6 @@
   position: relative;
   text-align: left;
   color: #002E36;
-  font-size: 100px;
   margin: 0px;
 }
 
