--- a/src/components/mediasection/mediasection.css
+++ b/src/components/mediasection/mediasection.css
@@ -4,7 +4,7 @@
 
   margin-left: -15px;
   margin-right: -15px;
-
+  margin-top: 0px;
 }
 
 .title {
@@ -28,8 +28,6 @@
   margin-bottom: 20px;
 }
 
-.wrapper.style1 {
-  border-bottom: 1px solid rgba(144, 144, 144, 0.25);
-  border-top: 1px solid rgba(144, 144, 144, 0.25);
+.wrapper.style2 {
   background-color: #eff5f5;
 }
