Update media section style

--- a/src/components/mediasection/mediasection.css
+++ b/src/components/mediasection/mediasection.css
@@ -29,5 +29,6 @@
 }
 
 .wrapper.style2 {
-  background-color: #eff5f5;
+  border-bottom: 1px solid rgba(144, 144, 144, 0.25);
+  background-color: #efefef;
 }
