--- a/src/components/mediathumbnail/mediathumbnail.css
+++ b/src/components/mediathumbnail/mediathumbnail.css
@@ -5,6 +5,7 @@
   background-color: #ffffff;
   border: 1px;
   border-radius: 5px;
+  margin-bottom: 15px;
 }
 
 .media-card-divider {
@@ -25,6 +26,10 @@
 }
 
 .media-card-candidate-img {
+  
+}
+
+.media-card-image {
   object-fit: cover;
   width: 100%;
   height: 200px;
