--- a/src/components/videosection/videosection.css
+++ b/src/components/videosection/videosection.css
@@ -19,12 +19,21 @@
 }
 
 .video-thumbnail {
-  height: 80%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
+  padding: 50px;
 }
 
-.wrapper.style1 {
+.wrapper.style3 {
   border-bottom: 1px solid rgba(144, 144, 144, 0.25);
-  border-top: 1px solid rgba(144, 144, 144, 0.25);
   background-color: #eff5f5;
+}
+
+.container-atas {
+  width: 90%;
+  height: 100%;
+  margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
