--- a/src/components/mediathumbnail/mediathumbnail.css
+++ b/src/components/mediathumbnail/mediathumbnail.css
@@ -8,6 +8,15 @@
   margin-bottom: 15px;
 }
 
+.btn-primary {
+  border-color: transparent;
+  font-size: 16px;
+}
+
+.btn-primary:hover {
+  border-color: transparent;
+}
+
 .media-card-divider {
   width: 100%;
   height: 5px;
@@ -25,8 +34,34 @@
   margin-bottom: 5px;
 }
 
-.media-card-candidate-img {
-  
+.media-card-candidate-img:hover .media-card-image{
+  opacity: 0.3;
+}
+
+.media-card-candidate-img:hover .detail-btn{
+  opacity: 1;
+}
+
+.media-card-candidate-img{
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.detail-btn {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 69%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.detail-btn-text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
 }
 
 .media-card-image {
