--- a/src/components/videosection/videosection.css
+++ b/src/components/videosection/videosection.css
@@ -34,6 +34,9 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+.embed-responsive {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);  
+}
 
 @media (max-width: 500px) .container-video {
   margin-left: 0;
