Add view detail btn when hover on candidate card section

--- a/src/components/candidatethumbnail/candidatethumbnail.css
+++ b/src/components/candidatethumbnail/candidatethumbnail.css
@@ -24,7 +24,17 @@
 }
 
 .candidate-card-image-link {
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
 
+.candidate-card-image-link:hover .candidate-card-image {
+  opacity: 0.3;
+}
+
+.candidate-card-image-link:hover .detail-btn{
+  opacity: 1;
+  top:48%;
 }
 
 .candidate-card-image {
