Change ImageHeader to carousel uncontrol

--- a/src/components/imageheader/ImageHeader.css
+++ b/src/components/imageheader/ImageHeader.css
@@ -9,6 +9,15 @@
   color : white;
 }
 
+.carousel-caption {
+  bottom: 800px;
+}
+
+.carousel-inner {
+  width: 100%;
+  height: 500px;
+}
+
 @media screen and (min-width: 576px) {
   h1 { font-size: 25px; }
   h2 { font-size: 20px; }
