--- a/src/routes/Election/routes/Candidate/components/CandidateInfo/candidateinfo.css
+++ b/src/routes/Election/routes/Candidate/components/CandidateInfo/candidateinfo.css
@@ -1,21 +1,21 @@
-.container-detail {
-  padding-left: 30px;
-  padding-right: 30px;
-  text-align: center;
+.container {
+  text-align: left;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-top: 20px;
 }
 
-.candidate-detail-card-image {
-  object-fit: cover;
-  width: 100%;
-  height: 300px;
-  min-height: 200px;
-  max-height: 300px;
-  margin-bottom: 5px;
+.candidate-name {
+  text-align: center
 }
 
-.social-media-icon {
-  width: 40px;
-  height: 40px;
-  margin: 10px;
+.img-card {
+  padding-top: 70px;
+}
+
+.chart {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
