--- a/src/routes/Home/components/MediaSection/mediasection.css
+++ b/src/routes/Home/components/MediaSection/mediasection.css
@@ -5,7 +5,9 @@
   margin-left: -15px;
   margin-right: -15px;
   margin-top: 0px;
-  height: 300px;
+  padding-right: 100px;
+  padding-left: 100px;
+  height: 1100px;
 }
 
 .title {
@@ -31,5 +33,5 @@
 
 .wrapper.style2 {
   border-bottom: 1px solid rgba(144, 144, 144, 0.25);
-  background-color: #efefef;
+
 }
