Change video to use embed semantic and wrap some content to container

--- a/src/routes/Home/components/VideoSection/videosection.css
+++ b/src/routes/Home/components/VideoSection/videosection.css
@@ -34,8 +34,15 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+
 .embed-responsive {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);  
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.ui.embed>.placeholder {
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
 }
 
 @media (max-width: 500px) .container-video {
